--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <title>Dom Challenge</title>
   <style>
-    #counter {
+    #element {
       background-color: black;
       color: white;
       display: table;
@@ -15,7 +15,7 @@
   <h1>
     Welcome to the DOM Challenge
   </h1>
-  <h1 id='counter'>
+  <h1 id='element'>
     0
   </h1>
   <button id='minus' > ➖ </button>
@@ -39,7 +39,7 @@
 
   </div>
 
-  <script src="js/index.min.js"></script>
+  <!-- <script src="js/index.min.js"></script> -->
   <script src="js/challenge.js"></script>
 </body>
 </html>
